virt01/deprecated/beets/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beets-svc
  labels:
    app: beets
spec:
  ports:
    - port: 8337
      protocol: TCP
      name: beets-svc-port
  selector:
    app: beets
